public/assets/css/style.css
/* ... */
/*-------------------------------
# Blog
--------------------------------*/

.blog-item {
  border: 1px solid #e9eef4;
  border-radius: 8px;
}
.blog-image {
  position: relative;
  overflow: hidden;
  border-radius: 8px 8px 0 0;
}
.blog-image img {
  border-radius: 8px 8px 0 0;
}

.blog-image:after {
  content: "";
  width: 100%;
  height: 100%;
  background: #000;
  opacity: 0.3;
  position: absolute;
  left: -100%;
  top: 0;
  transition: 0.5s;
  transform: rotate(180deg);
  border-radius: 8px 8px 0 0;
}
.blog-item:hover .blog-image:after {
  left: 0;
  transform: rotate(0deg);
}
.blog-image img {
  width: 100%;
}
.post-image {
  margin-bottom: 25px;
}
.pb120 {
  padding-bottom: 120px;
}
.blog-content {
  padding: 30px;
}
.blog-content h3 {
  font-size: 24px;
  line-height: 34px;
  margin-bottom: 10px;
}
.blog-content h3 a {
  color: #222;
  transition: 0.5s;
}
.blog-content h3 a:hover,
.blog-content h3 a:focus {
  color: #082f5e;
}
.bmeta .bcat {
  float: right;
}
.bmeta {
  font-size: 15px;
  margin-bottom: 25px;
}
.bmeta i {
  color: #082f5e;
}
.bmeta .bcat a {
  display: inline-block;
  padding: 1px 20px;
  background: #082f5e;
  color: #fff;
  border-radius: 5px 25px 5px 25px;
}
.bbtn {
  color: #444;
  font-weight: 600;
}
.blog-item {
  margin-bottom: 30px;
}
.bstyle-2 .blog-image,
.bstyle-2 .blog-image img,
.bstyle-2 .blog-image:after {
  border-radius: 8px;
}
.bstyle-2 .blog-item {
  border: 1px solid #e9eef4;
  border-radius: 8px;
  padding: 30px;
}
.bstyle-2 .blog-content {
  padding: 33px 0 0;
}
.post-nav.pnavigation {
  margin-top: 40px;
  text-align: center;
}
.post-nav.pnavigation a {
  display: inline-block;
  background: #f1f1f1;
  padding: 5px 19px;
  font-weight: 600;
  border-radius: 4px;
  transition: 0.5s;
  margin: 0 15px;
}
.post-nav.pnavigation a:hover,
.post-nav.pnavigation a:focus {
  background: #082f5e;
  color: #fff;
}

/*-------------------------------
# CTA
--------------------------------*/
.cta {
  padding-bottom: 120px;
}
.cta-item {
  border: 2px dashed #082f5e;
  background: rgba(217, 217, 217, 0.15);
  border-radius: 8px;
  position: relative;
  padding: 45px;
  overflow: hidden;
}
.cta-item .cta_img {
  position: absolute;
  bottom: 0px;
  right: 0;
  z-index: 1;
}
.cta-content {
  padding-right: 150px;
}
.cta-item h3 {
  font-size: 28px;
  margin-bottom: 15px;
}
.cta-item p {
  margin-bottom: 25px;
}
.cta_shape {
  display: inline-block;
  position: absolute;
  bottom: 0;
  right: 0;
}
.cta_shape svg {
  width: 175px;
}

/*-------------------------------
# Footer
--------------------------------*/

.footer {
  background: #359093;
  color: #fff;
  padding-top: 80px;
  position: relative;
}
.footer a {
  color: #fff;
  transition: 0.5s;
}
.footer a:hover,
.footer a:focus {
  color: #f06926;
}
.fntitle {
  font-size: 28px;
  color: #fff;
  line-height: 42px;
}
.about-footer .footer-logo {
  margin-bottom: 20px;
}
.about-footer p {
  padding-right: 10px;
}
.footer .newsletter {
}
.footer .newsletter form {
  position: relative;
}
.footer .newsletter input[type="email"] {
  border: 1px solid #fff;
  padding: 12px 34px;
  border-radius: 30px;
  width: 100%;
}
.footer .newsletter input[type="email"]:focus {
  outline: inherit;
}
.footer .newsletter button {
  border: 1px solid #082f5e;
  background: #082f5e;
  color: #fff;
  padding: 8px 36px;
  border-radius: 30px;
  position: absolute;
  right: 6px;
  top: 6px;
  font-size: 15px;
  font-weight: 600;
  transition: 0.5s;
}
.footer .newsletter button:hover,
.footer .newsletter button:focus {
  background-color: #359093;
}
.footer-bottom {
  border-top: 1px solid rgba(225, 225, 225, 0.08);
  padding-top: 50px;
  margin-top: 50px;
}
.fstyle-2 .footer-bottom {
  border-top: none;
  padding-top: 20px;
  margin-top: 0px;
}
.footer-title {
  font-size: 24px;
  color: #fff;
  margin-bottom: 40px;
  position: relative;
}
.footer-title::after {
  content: "";
  background-image: url(../img/shapes/footer-title.svg);
  position: absolute;
  width: 50px;
  height: 3px;
  bottom: -21px;
  left: 0;
}
.footer-bottom ul {
  list-style-type: none;
}
.contact_content img {
  width: 100%;
}
.contact-info p {
  overflow: hidden;
}
.contact-info i {
  float: left;
  padding-right: 15px;
  padding-top: 6px;
  font-size: 24px;
  color: #082f5e;
}

.contact-info p span {
  overflow: hidden;
  float: left;
}
.footer-bottom ul li a {
}
.single-footer li {
  line-height: 35px;
}
.fot-social span {
  margin-bottom: 26px;
  display: block;
  font-size: 20px;
  font-weight: 600;
}
.fot-social li {
  display: inline-block;
  margin-right: 24px;
}
.fot-social a {
  width: 40px;
  height: 40px;
  line-height: 43px;
  display: block;
  background: #1d2b45;
  text-align: center;
  font-size: 22px;
  color: #b4c1d2;
  border-radius: 10px;
  transform: rotate(50deg);
  transition: 0.5s;
}
.fot-social a i {
  transform: rotate(-50deg);
}
.fot-social a:hover,
.fot-social a:focus {
  background: #082f5e;
  color: #fff;
}
.newsletter p {
  margin-bottom: 35px;
}
.copyright {
  padding: 22px 30px;
  background: rgba(13, 95, 249, 0.05);
  margin-top: 70px;
}
.copyright p {
  margin-bottom: 0;
}

.fbulb_shape {
  position: absolute;
  top: 106px;
  left: 22px;
}
.fbulb_shape svg {
  width: 55px;
}
.fpencil_shape {
  position: absolute;
  top: 37%;
  right: 173px;
}
.fpencil_shape svg {
  width: 40px;
}
.fshape1 {
  position: absolute;
  top: 130px;
  right: 30px;
}
.fshape1 svg {
  width: 46px;
}
.fshape2 {
  position: absolute;
  top: 63%;
  right: 65px;
}
.fshape2 svg {
  width: 50px;
}
.fshape3 {
  position: absolute;
  right: -25px;
  top: 45%;
}
.fshape3 svg {
  width: 95px;
}
.fshape4 {
  position: absolute;
  left: 26px;
  top: 55%;
}
.fshape4 svg {
  width: 45px;
}
.fshape5 {
  position: absolute;
  left: 0;
  top: 80px;
}
.fshape5 svg {
  width: 100px;
}
/* ... */

